fix product image get too big or too small

--- a/src/Components/Design/Catalogue/CatalogueComponents/Product.scss
+++ b/src/Components/Design/Catalogue/CatalogueComponents/Product.scss
@@ -1,9 +1,15 @@
-
-
 .scale-width-150px {
   height: auto;
   width: 150px;
   border: 1px solid black;
   position: absolute;
   top: -500px;
+}
+
+.min-height-4rem {
+  min-height: 4rem;
+}
+
+.max-height-16rem {
+  max-height: 16rem;
 }
